--- a/.dev/assets/shared/css/woocommerce/checkbox.scss
+++ b/.dev/assets/shared/css/woocommerce/checkbox.scss
@@ -1,6 +1,7 @@
 /*! WooCommerce: Checkbox */
 .woocommerce-page input[type="checkbox"] {
 	appearance: checkbox;
+	opacity: 1;
 }
 
 .woocommerce .woocommerce-form-login .woocommerce-form-login__rememberme {
